# transparent_proxy

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
example/: cacert-2025-02-25.pem  example.cpp
include/httpengine/: HttpFilteringEngineCAPI.h  HttpFilteringEngineControl.hpp
include/httpengine/mitm/diversion/: BaseDiverter.hpp  DiversionControl.hpp
include/httpengine/mitm/http/: BaseHttpTransaction.hpp
include/httpengine/mitm/secure/: BaseInMemoryCertificateStore.hpp  TlsCapableHttpAcceptor.hpp  TlsCapableHttpBridge.hpp
include/httpengine/util/cb/: EngineCallbackTypes.h  EventReporter.hpp
include/util/http/: KnownHttpHeaders.hpp
src/http/client/: x509_cert_utilities.cpp
src/httpengine/: HttpFilteringEngineCAPI.cpp  HttpFilteringEngineControl.cpp
src/httpengine/mitm/diversion/: BaseDiverter.cpp  DiversionControl.cpp
src/httpengine/mitm/diversion/impl/win/: WinDiverter.cpp
src/httpengine/mitm/http/: BaseHttpTransaction.cpp  HttpRequest.cpp  HttpResponse.cpp
src/httpengine/mitm/secure/: BaseInMemoryCertificateStore.cpp  TlsCapableHttpBridge.cpp  WindowsInMemoryCertificateStore.cpp
windivert-driver/: windivert.h  windivert.rc  windivert.sln  windivert.vcxproj  windivert_driver.c  windivert_log.mc  windivert_shared.c
